api-gateway: Agregada ruta vercel del frontend